feat. código refatorado para atender aos pontos da PR
